--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -531,6 +531,7 @@
 
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/total_term_chart"
+                        android:layout_gravity="end"
                         android:layout_width="match_parent"
                         android:layout_height="300dp" />
                 </LinearLayout>
