--- a/app/src/main/res/layout/fragment_baby_feeds.xml
+++ b/app/src/main/res/layout/fragment_baby_feeds.xml
@@ -69,7 +69,7 @@
             tools:listitem="@layout/prescription_list_item" />
 
         <ProgressBar
-            android:id="@+id/pb_loading"
+            android:id="@+id/pb_loading_two"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true" />
