--- a/app/src/main/res/layout/fragment_baby_lactation.xml
+++ b/app/src/main/res/layout/fragment_baby_lactation.xml
@@ -20,14 +20,33 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_15dp" />
 
-        <include
-            android:id="@+id/inc_mum"
-            layout="@layout/mother_item" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <include
+            <LinearLayout
+                android:id="@+id/ln_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            android:id="@+id/inc_details"
-            layout="@layout/baby_item" />
+                <include
+                    android:id="@+id/inc_mum"
+                    layout="@layout/mother_item" />
+
+                <include
+                    android:id="@+id/inc_details"
+                    layout="@layout/baby_item" />
+            </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/loading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="visible" />
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -74,19 +93,26 @@
                     android:layout_height="1dp"
                     android:background="@color/black" />
 
-                <include
-                    android:id="@+id/status"
-                    layout="@layout/order_list_view"
+                <LinearLayout
+                    android:id="@+id/ln_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_15dp" />
+                    android:orientation="vertical">
 
-                <include
-                    android:id="@+id/response"
-                    layout="@layout/order_list_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_15dp" />
+                    <include
+                        android:id="@+id/status"
+                        layout="@layout/order_list_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_15dp" />
+
+                    <include
+                        android:id="@+id/response"
+                        layout="@layout/order_list_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_15dp" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
