--- a/app/src/main/res/layout/fragment_baby_monitoring.xml
+++ b/app/src/main/res/layout/fragment_baby_monitoring.xml
@@ -30,6 +30,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/ln_current"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
